@@ -603,6 +603,12 @@ class P4A_DB_Source extends P4A_Data_Source
 
 			$this->_composeGroupPart($select);
 			$select = $this->_composeSelectCountQuery((string)$select);
+			
+			/* Hack to solve mystic mysql bug: p4a bug 1666868 */
+			/*http://sourceforge.net/tracker/index.php?func=detail&aid=1666868&group_id=98294&atid=620566*/
+			if (!empty($this->_join) and $db->getDBType() == 'mysql') {
+				$db->adapter->getOne($query);
+			}
 			return $db->adapter->fetchOne($select) + 1;
 		}
 	}
